<resources>
    <string name="app_name">FithPath</string>
    <string name="title_activity_maps">FitPath</string>
    <string name="topTitle">Correr</string>
    <string name="runEndText">Pretender guardar a corrida?</string>
    <string name="runName">Nome para guardar a corrida</string>
    <string name="runDetails">Detalhes</string>
    <string name="btnDelete">Apagar</string>
    <string name="btnSave">Guardar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_about_us">Sobre nós</string>
    <string name="menu_map">Mapa</string>
    <string name="menu_runs">Corridas</string>
    <string name="menu_exit">Sair</string>
    <string name="logout">Deseja fazer logout?</string>
    <string name="btnLogout">Sim</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="about_us">
        Este trabalho do curso de Licenciatura de Engenharia Informática, foi-nos proposto para a disciplina de
        Desenvolvimento de Aplicações Móveis e desenvolvido pelos alunos:\nTiago Fernandes nº.22102\nRafael Pimentel nº.20963</string>
</resources>