<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/saveRun"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3FFFFFF"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="370dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/rounded_corners"
        android:orientation="vertical">

        <TextView
            android:id="@+id/timer"
            android:layout_width="500dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/runEndText"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveBtn"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="35dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/black"
            android:background="@drawable/roundbtn"
            android:text="@string/btnSave" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/deleteBtn"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_alignRight="@+id/saveBtn"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="35dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/black"
            android:background="@drawable/roundbtn"
            android:text="@string/btnDelete" />


    </RelativeLayout>
</RelativeLayout>

